k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloops
spec:
  type: NodePort
  selector:
    app: helloops
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30080
